@@ -33,6 +33,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #1745035: Add a command size and data size limit to smtpd.py, to
+  prevent DoS attacks.  Patch by Savio Sena.
+
 - Issue #4925: Add filename to error message when executable can't be found in
   subprocess.
 
